Expand fix for java module-opens in tests for all opens