@@ -152,6 +152,11 @@
 				<configuration>
 					<argLine>
 					    --add-opens java.base/java.lang=ALL-UNNAMED
+					    --add-opens java.base/java.math=ALL-UNNAMED
+					    --add-opens java.base/java.util=ALL-UNNAMED
+					    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+					    --add-opens java.base/java.net=ALL-UNNAMED
+					    --add-opens java.base/java.text=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
